# promopulse-

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
promopulse/: __init__.py
promopulse/api/: __init__.py  health.py  promotions.py  subscriptions.py  users.py
promopulse/api/schemas/: promotions.py  subscriptions.py  users.py
promopulse/app/: __init__.py  main.py
promopulse/core/: __init__.py  config.py  logging.py  security.py
promopulse/db/: __init__.py  session.py
promopulse/db/migrations/: env.py  script.py.mako
promopulse/db/models/: __init__.py  base.py  promotion.py  subscription.py  user.py
promopulse/domain/: __init__.py
promopulse/domain/promotions/: __init__.py  dependencies.py  exceptions.py  service.py
promopulse/domain/subscriptions/: __init__.py  dependencies.py  exceptions.py  service.py
promopulse/domain/users/: __init__.py  dependencies.py  service.py
promopulse/infrastructure/: __init__.py
promopulse/infrastructure/promotions/: __init__.py  repository.py
promopulse/infrastructure/subscriptions/: __init__.py  repository.py
promopulse/infrastructure/users/: __init__.py  repository.py
promopulse/promopulse_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
promopulse_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/api/: test_subscriptions.py
tests/core/: test_security_encryption.py
tests/domain/: test_subscription_service.py
tests/infrastructure/: test_subscription_repository.py
(+4 files in other folders)
