[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promopulse-api"
version = "0.1.0"
description = "PromoPulse API – Promotion & Engagement Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name="PromoPulse Team", email="dev@promopulse.local" }
]

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["promopulse"]
